# Photograph

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  shell_minimal.html
backend/: go.mod  go.sum
backend/cmd/photoend/: main.go
backend/cmd/wasm/: main.go
backend/internal/api/: image.go  route.go  router.go
backend/internal/filter/: manager.go  models.go
backend/internal/filter/create/: methods.go  models.go
backend/internal/filter/images/: methods.go  models.go
backend/internal/filter/join/: methods.go  models.go
backend/internal/filter/link/: methods.go  models.go
backend/internal/filter/link/delink/: methods.go  models.go
backend/internal/filter/mouse/: methods.go  models.go
backend/internal/filter/node/: methods.go  models.go
backend/internal/filter/node/denode/: methods.go  models.go
backend/internal/filter/node/selected/: methods.go  models.go
backend/internal/interfaces/: interface.go
backend/internal/static/: index.html  landing.html
backend/internal/static/wasm/: shell_minimal.html
backend/internal/websocket/: manager.go  models.go  read.go  write.go
include/: Application.hpp  FilePicker.h  GUI.hpp  WebSocketClient.hpp  style.hpp
include/node/: ImageData.hpp  Link.hpp  NodeBase.hpp  NodeMenu.hpp
include/node/submodules/: Blur.hpp  Brightness.hpp  Monochrome.hpp  RGB.hpp
include/node/submodules/io/: Download.hpp  Input.hpp  Output.hpp  Preview.hpp
source/: Application.cpp  GUI.cpp  main.cpp  style.cpp
source/node/: NodeBase.cpp  NodeMenu.cpp
source/node/submodules/: Blur.cpp  Brightness.cpp  Monochrome.cpp  RGB.cpp
source/node/submodules/io/: Download.cpp  Input.cpp  Output.cpp  Preview.cpp
src/: Application.cpp  GUI.cpp  Node.cpp  main.cpp  style.cpp
src/node/: NodeBase.cpp  NodeMenu.cpp
src/node/submodules/: Blur.cpp  Brightness.cpp  Monochrome.cpp  RGB.cpp
src/node/submodules/io/: Download.cpp  Input.cpp  Output.cpp  Preview.cpp
